src/objects/encrypttobj__c.object
<CustomObject>
    <fields>
        <fullName>Date_ofBirth__c</fullName>
        <label>Date ofBirth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>encrypted_field__c</fullName>
        <label>encrypted field</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>encrypttobj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>all_view</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Date_ofBirth__c</columns>
        <columns>Email__c</columns>
        <columns>name__c</columns>
        <columns>Phone_number__c</columns>
        <columns>SSN__c</columns>
        <filterScope>Everything</filterScope>
        <label>all view</label>
    </listViews>
    <nameField>
        <displayFormat>e-{00000}</displayFormat>
        <label>encrypttobj no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>encrypttobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>